--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,11 @@ subprojects {
 
         ballerinaStdLibs "io.ballerina.lib:data.jsondata-ballerina:${stdlibDataJsonDataVersion}"
 
+        ballerinaStdLibs "io.ballerina.stdlib:sql-ballerina:${stdlibSqlVersion}"
+        ballerinaStdLibs "io.ballerina.stdlib:mysql-ballerina:${stdlibMySqlVersion}"
+
+        ballerinaStdLibs "io.ballerina.lib:cdc.mysql.driver-ballerina:${stdlibCdcMysqlDriverVersion}"
+
         ballerinaStdLibs "io.ballerina.stdlib:observe-ballerina:${observeVersion}"
         ballerinaStdLibs "io.ballerina:observe-ballerina:${observeInternalVersion}"
     }
