--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,12 @@ stdlibTimeVersion=2.7.0
 stdlibCryptoVersion=2.9.0
 stdlibRandomVersion=1.7.0
 
+stdlibSqlVersion=1.16.0
+stdlibMySqlVersion=1.15.0
+
 # Ballerinax ObseObserver
 observeVersion=1.5.0
 observeInternalVersion=1.5.0
+
+# Ballerina library
+stdlibCdcMysqlDriverVersion=0.1.0-SNAPSHOT
