--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -97,6 +97,55 @@ tasks.register('commitTomlFiles') {
     }
 }
 
+tasks.register('startMySQLServer') {
+    doLast {
+        if (!Os.isFamily(Os.FAMILY_WINDOWS)) {
+            def stdOut = new ByteArrayOutputStream()
+            exec {
+                commandLine 'sh', '-c', "docker ps --filter name=mysql-cdc"
+                standardOutput = stdOut
+            }
+            if (!stdOut.toString().contains("mysql-cdc")) {
+                println "Starting MySQL server."
+                exec {
+                    commandLine 'sh', '-c', "docker compose -f tests/environment/compose.yaml up -d"
+                    standardOutput = stdOut
+                }
+                println stdOut.toString()
+                sleep(20 * 1000)
+            } else {
+                println "MySQL server is already running."
+            }
+        }
+    }
+}
+
+tasks.register('stopMySQLServer') {
+    doLast {
+        if (!Os.isFamily(Os.FAMILY_WINDOWS)) {
+            def stdOut = new ByteArrayOutputStream()
+            exec {
+                commandLine 'sh', '-c', "docker ps --filter name=mysql-cdc"
+                standardOutput = stdOut
+            }
+            if (stdOut.toString().contains("mysql-cdc")) {
+                println "Stopping MySQL server."
+                exec {
+                    commandLine 'sh', '-c', "docker compose -f tests/environment/compose.yaml rm -svf"
+                    standardOutput = stdOut
+                }
+                println stdOut.toString()
+                sleep(5 * 1000)
+            } else {
+                println "MySQL server is not started."
+            }
+        }
+    }
+}
+
+test.dependsOn "startMySQLServer"
+test.finalizedBy "stopMySQLServer"
+
 updateTomlFiles.dependsOn copyStdlibs
 build.dependsOn ":${packageName}-native:build"
 build.dependsOn ":${packageName}-compiler-plugin:build"
