--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.caching=true
 group=io.ballerina.lib
-version=1.0.4-SNAPSHOT
+version=1.1.0-SNAPSHOT
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=6.0.18
@@ -21,17 +21,25 @@ ballerinaLangVersion=2201.12.0
 stdlibDataJsonDataVersion=1.1.0
 
 stdlibIoVersion=1.8.0
-stdlibTimeVersion=2.7.0
+stdlibTimeVersion=2.8.0
 
-stdlibCryptoVersion=2.9.0
+stdlibCryptoVersion=2.9.3
 stdlibRandomVersion=1.7.0
+stdlibLogVersion=2.12.0
+stdlibAvroVersion=1.2.0
+
+stdlibUuidVersion=1.10.0
+
+confluentAvroSerDesVersion=1.0.2
+confluentSchemaRegistryVersion=0.4.3
 
 stdlibSqlVersion=1.16.0
 stdlibJdbcVersion=1.14.0
 
-# Ballerinax ObseObserver
+# Ballerinax Observe
 observeVersion=1.5.0
 observeInternalVersion=1.5.0
+kafkaLibVersion=4.6.3
 
 # Ballerina library
 stdlibMysqlCdcDriverVersion=1.0.1
