Add DB-specific connector support

--- a/ballerina/Dependencies.toml
+++ b/ballerina/Dependencies.toml
@@ -70,6 +70,25 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
+name = "lang.array"
+version = "0.0.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.__internal"}
+]
+
+[[package]]
+org = "ballerina"
+name = "lang.error"
+version = "0.0.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
 name = "lang.int"
 version = "0.0.0"
 dependencies = [
@@ -82,6 +101,37 @@ dependencies = [
 org = "ballerina"
 name = "lang.object"
 version = "0.0.0"
+
+[[package]]
+org = "ballerina"
+name = "lang.regexp"
+version = "0.0.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "lang.runtime"
+version = "0.0.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+modules = [
+	{org = "ballerina", packageName = "lang.runtime", moduleName = "lang.runtime"}
+]
+
+[[package]]
+org = "ballerina"
+name = "lang.string"
+version = "0.0.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.regexp"}
+]
 
 [[package]]
 org = "ballerina"
@@ -108,13 +158,48 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "observe"
-<<<<<<< HEAD
 version = "1.5.0"
-=======
-version = "1.7.0"
->>>>>>> 4c90b25 ([Automated] Update the toml files)
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "random"
+version = "1.7.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "time"}
+]
+modules = [
+	{org = "ballerina", packageName = "random", moduleName = "random"}
+]
+
+[[package]]
+org = "ballerina"
+name = "sql"
+version = "1.16.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.object"},
+	{org = "ballerina", name = "time"}
+]
+
+[[package]]
+org = "ballerina"
+name = "test"
+version = "0.0.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.array"},
+	{org = "ballerina", name = "lang.error"}
+]
+modules = [
+	{org = "ballerina", packageName = "test", moduleName = "test"}
 ]
 
 [[package]]
@@ -157,8 +242,12 @@ dependencies = [
 	{org = "ballerina", name = "data.jsondata"},
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.runtime"},
 	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "random"},
+	{org = "ballerina", name = "test"},
 	{org = "ballerinai", name = "observe"},
+	{org = "ballerinax", name = "java.jdbc"},
 	{org = "ballerinax", name = "kafka"},
 	{org = "ballerinax", name = "mysql.cdc.driver"}
 ]
@@ -187,7 +276,6 @@ dependencies = [
 
 [[package]]
 org = "ballerinax"
-<<<<<<< HEAD
 name = "java.jdbc"
 version = "1.14.0"
 scope = "testOnly"
@@ -204,8 +292,6 @@ modules = [
 
 [[package]]
 org = "ballerinax"
-=======
->>>>>>> 4c90b25 ([Automated] Update the toml files)
 name = "kafka"
 version = "4.6.3"
 dependencies = [
@@ -238,4 +324,3 @@ org = "ballerinax"
 name = "mysql.driver"
 version = "1.8.0"
 scope = "testOnly"
-
