--- a/ballerina/Dependencies.toml
+++ b/ballerina/Dependencies.toml
@@ -41,6 +41,21 @@ modules = [
 
 [[package]]
 org = "ballerina"
+name = "file"
+version = "1.12.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "os"},
+	{org = "ballerina", name = "time"}
+]
+modules = [
+	{org = "ballerina", packageName = "file", moduleName = "file"}
+]
+
+[[package]]
+org = "ballerina"
 name = "io"
 version = "1.8.0"
 dependencies = [
@@ -165,6 +180,16 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
+name = "os"
+version = "1.10.1"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
 name = "random"
 version = "1.7.0"
 scope = "testOnly"
@@ -236,10 +261,11 @@ modules = [
 [[package]]
 org = "ballerinax"
 name = "cdc"
-version = "1.2.1"
+version = "1.2.2"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "data.jsondata"},
+	{org = "ballerina", name = "file"},
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.runtime"},
@@ -324,3 +350,4 @@ org = "ballerinax"
 name = "mysql.driver"
 version = "1.8.0"
 scope = "testOnly"
+
