--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,9 @@ stdlibCryptoVersion=2.9.3
 stdlibRandomVersion=1.7.0
 stdlibLogVersion=2.12.0
 stdlibAvroVersion=1.2.0
+stdlibOsVersion=1.10.1
 
+stdlibFileVersion=1.12.0
 stdlibUuidVersion=1.10.0
 
 confluentAvroSerDesVersion=1.0.2
