--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,13 @@ kafkaVersion=3.9.1
 fasterxmlVersion=2.16.2
 gsonVersion=2.10.1
 
+# Redis storage dependencies
+jedisVersion=4.1.1
+mutinyVersion=2.6.2
+smallryeCommonVersion=2.5.0
+commonsPool2Version=2.11.1
+jctoolsVersion=4.0.5
+
 ballerinaLangVersion=2201.12.0
 
 stdlibDataJsonDataVersion=1.1.0
